Name:            sqlite
Version:         0.1.1
License:         BSD3
License-file:    LICENSE
Homepage:        http://docserver.galois.com/sqlite.git/
Copyright: 
  Copyright (c) 2007, Galois
  Copyright (c) 2007, sof
Build-depends:   base
Synopsis:        Haskell binding to SQLite
Description:
  Haskell binding to SQLite.
  A Galois-local git(1) repository is
  also available, to use: git clone ssh:\/\/docserver\/var\/www\/sqlite.git sqlite
Extensions:      ForeignFunctionInterface, GeneralizedNewtypeDeriving
Ghc-options:     -O2 -Wall
Cc-options:      -Wall
Include-dirs:	 include
Includes:        sqlite3-local.h
C-Sources:       cbits/sqlite3-local.c
Extra-Libraries: sqlite3
-- Cheating here, including the tests/ .cabal + files in the parent (so as to dist them as one.)
extra-source-files:      
    README configure
    include/sqlite3-local.h
    sqlite.buildinfo.unix sqlite.buildinfo.win32 
    tests/configure tests/Main.hs tests/Setup.hs 
    tests/sqlite-tests.cabal
    tests/test.db tests/sqlite-tests.buildinfo.unix 
    tests/sqlite-tests.buildinfo.win32 
extra-tmp-files:
    sqlite.buildinfo
Exposed-modules:
    SQLite, 
    SQLite.Base,
    SQLite.Types,
    DB.SQL.Types
