Name:            sqlite-vfs
Version:         0.1
Synopsis:        Multiple files backend.
Author:          Galois Inc
Author:          docserver-devel-team@galois.com
Copyright:
  Copyright (c) 2007-8, Galois Inc
category:        Database
build-depends:   base, sqlite
extensions:      ForeignFunctionInterface
ghc-options:     -O2 -Wall
cc-options:      -Wall -g
include-dirs:    include, include/sqlite3.5
includes:        little.h
c-sources:       cbits/sqlite3.5/sqlite3.c
                 cbits/little_locks.c,
                 cbits/little.c,
                 cbits/little-ro.c,
                 cbits/little-common.c
-- Extra-Libraries: sqlite3
extra-source-files:
    configure
    sqlite.buildinfo.unix sqlite.buildinfo.win32
Exposed-modules:
    Database.SQLite.VFS

