Name:            sqlite-vfs
Version:         0.1
Synopsis:        Multiple files backend.
Author:          Galois Inc
Author:          docserver-devel-team@galois.com
Copyright:
  Copyright (c) 2007-8, Galois Inc
category:        Database
build-depends:   base, sqlite
extensions:      ForeignFunctionInterface
ghc-options:     -O2 -Wall
cc-options:      -Wall -g
include-dirs:    src, ../sqlite3.5
includes:        little.h
c-sources:       src/little_locks.c,
                 src/little.c,
                 src/little-ro.c,
                 src/little-common.c
extra-source-files:
    configure
    sqlite.buildinfo.unix sqlite.buildinfo.win32
Exposed-modules:
    Database.SQLite.VFS

